--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- STYLE -->
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+
+    <h1>Lista di Nome</h1>
+    <div class="card">
+        <ul id="listnames">
+            
+        </ul>
+    </div>
 
 
     <script src="./JS/script.js"></script>
